[gd_scene load_steps=43 format=3 uid="uid://c85qvwqv4xynr"]

[ext_resource type="Material" uid="uid://dujeuv6iab2w" path="res://Assets/Characters/Player/Shaders/Materials/player_skin_material.tres" id="1_uyuon"]
[ext_resource type="Texture2D" uid="uid://bip7aesedlxq4" path="res://Assets/Characters/Player/Movesets/StraightSword/player_straightSword.png" id="2_e70sl"]
[ext_resource type="Script" path="res://Assets/Characters/Player/Scripts/InputManager.gd" id="3_tao1v"]
[ext_resource type="Script" path="res://Assets/Characters/Player/Scripts/MovementManager.gd" id="4_fq7xd"]
[ext_resource type="Script" path="res://Assets/Characters/Player/Scripts/AnimationManager.gd" id="5_uq34l"]
[ext_resource type="Script" path="res://Assets/Characters/Player/Scripts/EquipmentDatabase.gd" id="6_8t8bp"]
[ext_resource type="Script" path="res://Assets/Characters/Player/Scripts/SkinManager.gd" id="6_j4vvw"]
[ext_resource type="Script" path="res://Assets/Characters/Player/Scripts/EquipmentManager.gd" id="6_rfn7m"]
[ext_resource type="Script" path="res://Assets/Characters/Player/Scripts/InventoryManager.gd" id="9_yhke6"]
[ext_resource type="Resource" uid="uid://cdl2jiyds7hs" path="res://Assets/Characters/Player/Inventory/Resource/player_inventory.tres" id="10_i3o7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcwg6"]
size = Vector2(5, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8it1"]
size = Vector2(4, 15)

[sub_resource type="Animation" id="Animation_boxv8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mjhtj"]
resource_name = "player_idleBack"
length = 1.35
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_gcnc4"]
resource_name = "player_idleFront"
length = 1.35
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_2lyys"]
resource_name = "player_idleLeft"
length = 1.35
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_l3jgb"]
resource_name = "player_idleRight"
length = 1.35
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_73e73"]
resource_name = "player_runBack"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49, 50]
}

[sub_resource type="Animation" id="Animation_rp717"]
resource_name = "player_runFront"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_6rcnb"]
resource_name = "player_runLeft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [63, 64, 65, 66, 67, 68]
}

[sub_resource type="Animation" id="Animation_3up75"]
resource_name = "player_runRight"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_cyg1v"]
resource_name = "player_walkBack"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [81, 82, 83, 84, 85, 86]
}

[sub_resource type="Animation" id="Animation_vbs6x"]
resource_name = "player_walkFront"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77]
}

[sub_resource type="Animation" id="Animation_we3rd"]
resource_name = "player_walkLeft"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [99, 100, 101, 102, 103, 104]
}

[sub_resource type="Animation" id="Animation_y2ss8"]
resource_name = "player_walkRight"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [90, 91, 92, 93, 94, 95]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xo6vf"]
_data = {
"RESET": SubResource("Animation_boxv8"),
"player_idleBack": SubResource("Animation_mjhtj"),
"player_idleFront": SubResource("Animation_gcnc4"),
"player_idleLeft": SubResource("Animation_2lyys"),
"player_idleRight": SubResource("Animation_l3jgb"),
"player_runBack": SubResource("Animation_73e73"),
"player_runFront": SubResource("Animation_rp717"),
"player_runLeft": SubResource("Animation_6rcnb"),
"player_runRight": SubResource("Animation_3up75"),
"player_walkBack": SubResource("Animation_cyg1v"),
"player_walkFront": SubResource("Animation_vbs6x"),
"player_walkLeft": SubResource("Animation_we3rd"),
"player_walkRight": SubResource("Animation_y2ss8")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_chdrt"]
animation = &"player_idleFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k8v5x"]
animation = &"player_idleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b7at7"]
animation = &"player_idleBack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vgqq5"]
animation = &"player_idleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_kp81a"]
blend_point_0/node = SubResource("AnimationNodeAnimation_chdrt")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_k8v5x")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_b7at7")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_vgqq5")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8te80"]
animation = &"player_runLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p2pk8"]
animation = &"player_runFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4swvh"]
animation = &"player_runBack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_68sl4"]
animation = &"player_runRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1b6nm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8te80")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_p2pk8")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_4swvh")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_68sl4")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_macc0"]
animation = &"player_walkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1w2yt"]
animation = &"player_walkRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wxx22"]
animation = &"player_walkFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_plx4i"]
animation = &"player_walkBack"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qwvnx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_macc0")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_1w2yt")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_wxx22")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_plx4i")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hwfad"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_kp81a")
states/Idle/position = Vector2(280, 100)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_1b6nm")
states/Run/position = Vector2(521, 100)
states/Start/position = Vector2(166, 99)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_qwvnx")
states/Walk/position = Vector2(394, 99)

[node name="Player" type="CharacterBody2D"]
z_as_relative = false
y_sort_enabled = true
collision_layer = 2
collision_mask = 15

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kcwg6")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_x8it1")
debug_color = Color(0.964706, 0.172549, 0.223529, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
z_as_relative = false
material = ExtResource("1_uyuon")
texture = ExtResource("2_e70sl")
offset = Vector2(-0.5, -7.5)
hframes = 9
vframes = 32

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xo6vf")
}
tree_root = SubResource("AnimationNodeStateMachine_hwfad")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Run/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xo6vf")
}

[node name="ScriptManager" type="Node2D" parent="."]

[node name="InputManager" type="Node2D" parent="ScriptManager"]
script = ExtResource("3_tao1v")

[node name="MovementManager" type="Node2D" parent="ScriptManager"]
script = ExtResource("4_fq7xd")

[node name="AnimationManager" type="Node2D" parent="ScriptManager"]
script = ExtResource("5_uq34l")

[node name="SkinManager" type="Node2D" parent="ScriptManager"]
script = ExtResource("6_j4vvw")

[node name="EquipmentManager" type="Node2D" parent="ScriptManager"]
script = ExtResource("6_rfn7m")

[node name="EquipmentDatabase" type="Node2D" parent="ScriptManager/EquipmentManager"]
script = ExtResource("6_8t8bp")

[node name="InventoryManager" type="Node2D" parent="ScriptManager"]
script = ExtResource("9_yhke6")
inventory = ExtResource("10_i3o7h")
